# mdlout

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  TODO.md  mdlout.py  pyproject.toml
docs/: ARCHITECTURE.md  CI.md  CONTRIBUTING.md  FAQ.md  PERFORMANCE.md  PYPI.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.2.1.md  RELEASE_NOTES_v0.2.2.md  RELEASE_NOTES_v0.2.3.md  RELEASE_NOTES_v0.2.4.md  RELEASE_NOTES_v0.2.5.md  RELEASE_NOTES_v0.2.6.md  RELEASE_NOTES_v0.2.7.md  RELEASE_NOTES_v0.2.8.md  RELEASE_NOTES_v0.2.9.md  RELEASE_NOTES_v0.3.0.md  best_practices.md  build_notes.md  chapter3_pagination_drift_investigation.md  cookbook.md  tutorial.md  z53_internals.md
examples/: 01_hello.md  02_typography.md  03_lists_and_tables.md  04_math.md  05_music.md  06_report.md  07_raw_lout_and_svg.md  08_kitchen_sink.md  CONTRIBUTING.md  PUBLISHING.md  README.md  academic_poster.md  article.md  book_chapter.md  book_with_epigraphs.md  chord_chart.md  complex_diag.md  cv.md  diag_gallery.md  exam.md  gallery.md  generate_gallery.py  handbook.md  index.md  journal.md  letter.md  magazine_layout.md  marginalia.md  math_with_diagrams.md  menu.md  mermaid.md  multilingual.md  mydefs  poster_a0.md  presentation.md  scientific_paper.md  slides_basic.md  svg_diagram.md  technical_manual.md  textbook.md
tests/: README.md  bench.html  bench.jsonl  bench.py  bench.sh  browser_test.py  browser_test.sh  browser_test_manifest.json  chromium_diff.sh  chromium_wrap_svg.py  compare.py  font_embed_spot_check.py  history.html  history.jsonl  history.py  (+16 more)
(+128 files in other folders)
