[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mdlout"
version = "0.2.5"
description = "Markdown to Lout converter (renders to HTML via SVG back end, or PDF)."
readme = "README.md"
authors = [{name = "James Clements III", email = "james.l.clements.iii@gmail.com"}]
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Text Processing :: Markup :: HTML",
]

[project.urls]
Homepage = "https://github.com/jclements3/mdlout"
Repository = "https://github.com/jclements3/mdlout"

[project.scripts]
mdlout = "mdlout:main"

[tool.setuptools]
py-modules = ["mdlout"]
